[DjvuThumbnailer] Replace open coded ddjvu invocation with QProcess

This also fixes a kdeinit crash due to calling exit(1) in case
execvp failed (e.g. due to a missing ddjvu binary).

BUG: 420074